# ray-tracing-weekend

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/color/: color.h
src/math/: math_utils.h  ray.h  vec3.h
src/objects/: camera.cpp  camera.h  object.h  sphere.cpp  sphere.h
src/scene/: scene.cpp  scene.h
src/utils/: rng.h  utils.h
tests/: CMakeLists.txt  camera_tesst.cpp  scene_test.cpp  sphere_test.cpp  vec3_tests.cpp
